--- a/NODE_demo/album/views/404.ejs
+++ b/NODE_demo/album/views/404.ejs
@@ -34,58 +34,24 @@
                 <div class="container d-flex justify-content-between">
                   <a href="#" class="navbar-brand d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
-
                     <strong>Album</strong>
-                    <strong>Library</strong>
-
                   </a>
                   <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
                 </div>
               </div>
-
-
             </header>
-
-
-
     <main role="main">
           <section class="jumbotron text-center">
             <div class="container">
-              <h1 class="jumbotron-heading">河蟹相册</h1>
-              <p class="lead text-muted">一个Express框架的学习。后端运用ejs模板引擎驱动，前端样式运用bootstrap。</p>
-              <p>
-                <a href="#" class="btn btn-primary my-1">上传照片</a>
-              </p>
+              <h1>404：页面没找到<h1>
+                <hr>
+              <p class="lead text-muted">生活难免会有不如意。<p>
             </div>
           </section>
 
-          <div class="album py-5 bg-light">
-            <div class="container">
-              <div class="row">
 
-                <% for(var i =0 ; i < albums.length; i++) { %>
-                <div class="col-md-4">
-                  <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22343%22%20height%3D%22225%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20343%20225%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_16141a5d6b3%20text%20%7B%20fill%3A%23eceeef%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A17pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_16141a5d6b3%22%3E%3Crect%20width%3D%22343%22%20height%3D%22225%22%20fill%3D%22%2355595c%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22114.21875%22%20y%3D%22120.15%22%3EThumbnail%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true">
-                    <div class="card-body">
-                      <p class="card-text"><%= albums[i] %></p>
-                      <div class="d-flex justify-content-between align-items-center">
-                        <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                          <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
-                        </div>
-                        <small class="text-muted">9 mins</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <% }  %>
-
-              </div>
-            </div>
-          </div>
 
         </main>
     <footer class="text-muted">
