--- a/NODE_demo/album/views/album.ejs
+++ b/NODE_demo/album/views/album.ejs
@@ -68,7 +68,7 @@
                 <% for(var i =0 ; i < images.length; i++) { %>
                 <div class="col-md-4">
                   <div class="card mb-4 box-shadow">
-                    <img class="card-img-top" src="<%=images[i]" %>>
+                    <img class="card-img-top" src="<%=images[i] %>">
                     <div class="card-body">
                       <p class="card-text">这是照片！</p>
                       <div class="d-flex justify-content-between align-items-center">
