--- a/NODE_demo/album/views/index.ejs
+++ b/NODE_demo/album/views/index.ejs
@@ -32,7 +32,7 @@
               </div>
               <div class="navbar navbar-dark bg-dark box-shadow">
                 <div class="container d-flex justify-content-between">
-                  <a href="#" class="navbar-brand d-flex align-items-center">
+                  <a href="/" class="navbar-brand d-flex align-items-center">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
                     <strong>Album</strong>
                   </a>
@@ -70,7 +70,7 @@
                       <p class="card-text"><%= albums[i] %></p>
                       <div class="d-flex justify-content-between align-items-center">
                         <div class="btn-group">
-                          <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                          <a href="/<%= albums[i] %>"><button type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
                           <!-- <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button> -->
                         </div>
                         <small class="text-muted">9 mins</small>
