--- a/NODE_demo/album/views/index.ejs
+++ b/NODE_demo/album/views/index.ejs
@@ -53,7 +53,7 @@
               <h1 class="jumbotron-heading">河蟹相册</h1>
               <p class="lead text-muted">一个Express框架的学习。后端运用ejs模板引擎驱动，前端样式运用bootstrap。</p>
               <p>
-                <a href="#" class="btn btn-primary my-1">上传照片</a>
+                <a href="/upload" class="btn btn-primary my-1">上传照片</a>
               </p>
             </div>
           </section>
