--- a/JS_program_demo/todoList/todo.css
+++ b/JS_program_demo/todoList/todo.css
@@ -53,3 +53,13 @@ a, ins {
 .todo-content {
 	display: inline-block;
 }
+
+.showgit {
+    position: absolute;
+    bottom: 50px;
+}
+
+.showgit>a {
+    color: #1bb38e;
+    font-size: 30px;
+}
